week 3 backend done

--- a/.env
+++ b/.env
@@ -1,1 +1,6 @@
-Port = 5000
+PORT = 8000
+MONGODB_URL=mongodb://127.0.0.1:27017/jobportal
+SECRET_KEY=GLA$88emwq8
+API_KEY=589548578686451
+API_SECRET=dIGBOLsJruwcR45vwXqLxemuPY4
+CLOUD_NAME=dvlkfh2dl
